fix: removed scrollbar

--- a/projects/stats-preview-card-component-main/style.css
+++ b/projects/stats-preview-card-component-main/style.css
@@ -7,7 +7,7 @@
 }
 
 html{
-    height: 100vh;
+    height: 98vh;
     width: 100%;
     background: hsl(233, 47%, 7%);
     color: white;
